--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   bloc: ^7.0.0
   flutter_bloc: ^7.0.0
   equatable: ^2.0.2
+  intl: ^0.17.0 # for date formatting
 
 dev_dependencies:
   flutter_test:
